# VL

./: .gitignore  AbstractAnalysis.hs  AbstractEvaluator.hs  AbstractValue.hs  Alacarte.hs  ChangeLog.md  CodeGenerator.hs  Common.hs  ConcreteEvaluator.hs  ConcreteValue.hs  Convert.hs  Coproduct.hs  Desugar.hs  Environment.hs  Expression.hs  FixedPoint.hs  Iso.hs  LICENSE  Macroexpand.hs  Makefile  NOTES  Parser.hs  Prepare.hs  Pretty.hs  README.md  Rename.hs  Scalar.hs  Syntax.hs  TODO.org  Test.hs  Token.hs  Uniquify.hs  VL.cabal  VL.hs  ZEncoding.hs  package.yaml  stack.yaml
Abstract/: Analysis.hi  Analysis.hs  Evaluator.hi  Evaluator.hs  Value.hi  Value.hs
Alacarte/: Coproduct.hi  Coproduct.hs  FixedPoint.hi  FixedPoint.hs
Compiler/: BallOfHair.hs  C.hs  CodeGenerator.hs  Monad.hs  ZEncoding.hs  vl2c.hs
Concrete/: Evaluator.hi  Evaluator.hs  Value.hi  Value.hs
Language/: Common.hi  Common.hs  Desugar.hi  Desugar.hs  Environment.hi  Environment.hs  Expression.hi  Expression.hs  Iso.hi  Iso.hs  Parser.hi  Parser.hs  Prepare.hi  Prepare.hs  Pretty.hi  Pretty.hs  Read.hs  Rename.hs  Scalar.hi  Scalar.hs  Syntax.hi  Syntax.hs  Token.hi  Token.hs  Uniquify.hi  Uniquify.hs
Test/: Test.hi  Test.hs  run-tests.sh
Test/vl/: fact.vl  filter.vl
src/VL/Abstract/: Analysis.hs  Evaluator.hs  Value.hs
src/VL/Alacarte/: FixedPoint.hs
src/VL/Compiler/: C.hs  CodeGenerator.hs  ZEncoding.hs
src/VL/Concrete/: Value.hs
src/VL/Language/: Common.hs  Iso.hs  (+7 more)
test/: test-compiler.hs  test-evaluator.hs
test/vl/: even.vl  fact2.vl  fib.vl  filter.vl  gcd.vl  map.vl  z.vl
